[更新]移除不需要的檔案、修改og 網址

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "zhubei-trans"
-  }
+    "default": "trans-zhunan",
+    "zhunan": "trans-zhunan"
+  },
+  "targets": {},
+  "etags": {}
 }
